--- a/Report.tex
+++ b/Report.tex
@@ -32,6 +32,7 @@
 %----------------------------------------------------------------------------------------
 
 \documentclass[12pt]{article}
+%\renewcommand{\familydefault}{\sfdefault}
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{multicol}
