Added paragraph spacing

--- a/Report.tex
+++ b/Report.tex
@@ -38,6 +38,7 @@
 \usepackage{multicol}
 \usepackage{graphicx}
 \setlength{\parindent}{0pt}
+\setlength{\parskip}{1em}
 
 %----------------------------------------------------------------------------------------
 %	The following removes section numbering
