--- a/Report.tex
+++ b/Report.tex
@@ -31,6 +31,10 @@
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
 
+%Fixes pandoc tightlist error
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+
 \documentclass[12pt]{article}
 %\renewcommand{\familydefault}{\sfdefault}
 \usepackage{amsfonts}
